# Musicore

./: .gitignore  .prettierrc  CMakeLists.txt  LICENSE  Musical.sln  Musical.vcxproj  Musical.vcxproj.filters  README.md  index.html  interface.cpp  interface.h  interface.xml  main.cpp  musicore.config.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
enc_temp_folder/a62884bd3e6c385fe819cd3f4d57815/: interface.xml
src/: Layout.tsx  main.cpp  main.tsx  structs.ts
src-tauri/: Cargo.toml  build.rs  musicore.config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  lib.rs  main.rs  music.rs  profile.rs
src/assets/css/: App.css  MainPage-music.css  MainPage.css  Music.css  Playlists.css  ProfilePage.css  Search.css  WinDecoration.css
src/components/: Icon.tsx  Loader.tsx  MorePages.tsx  Music.tsx  Playlists.tsx  Search.tsx  SidePanel.tsx  WindowDecoration.tsx
src/components/icons/: PlayerIcon.tsx
src/components/pages/: Library.tsx  Main.tsx  Player.tsx  Profile.tsx  Search.tsx
src/css/: MainPage-music.css  Search.css  SidePanel.css  Variables.css
src/logic/: music.ts  player.ts
src/pages/: Library.tsx  Main.tsx  MainPage.tsx  Player.tsx  PlayerPage.tsx  Profile.tsx  ProfilePage.tsx  Search.tsx  SearchPage.tsx
src/styles/: App.sass  Music.sass  ProfilePage.sass  Search.sass  SidePanel.sass  Variables.sass  WinDecoration.sass
src/styles/pages/: Library.sass  LibraryPage.sass  Main.sass  MainPage.sass  Player.sass  (+3 more)
