[package]
name = "Musicore"
version = "0.1.0"
description = "Music player"
authors = ["k44rme"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.1"
dirs = "6.0.0"
id3 = "1.16.4"
base64 = "0.22.1"
urlencoding = "2.1.3"
mp3-duration = "0.1.10"
rand = "0.10.1"
tiny_http = "0.12.0"
toml = "1.1.2"
dunce = "1.0.5"
toml_edit = "0.25.11"
directories = "6.0.0"

